# MCP_Sentry

./: .gitignore  QUICK_START.md  README.md  SETUP_DEPLOYMENT.md  package-lock.json  package.json  pnpm-lock.yaml  setup.js
.github/workflows/: ingest.yml
apps/gateway/: .dockerignore  Dockerfile  package-lock.json  package.json
apps/gateway/src/: executor.ts  index.ts  provisioner.ts
apps/platform/: next.config.ts  package-lock.json  package.json
apps/platform/src/app/: globals.css  page.tsx
apps/platform/src/app/actions/: chat.ts
apps/platform/src/app/api/deployment-status/: route.ts
apps/platform/src/app/api/ingest/: route.ts
apps/platform/src/app/auth/callback/: route.ts
apps/platform/src/app/auth/error/: page.tsx
apps/platform/src/app/client/: page.tsx
apps/platform/src/app/components/: AuthForm.tsx  Footer.tsx  Header.tsx  IngestForm.tsx
apps/platform/src/app/dashboard/: ToolsModal.tsx  page.tsx
apps/platform/src/app/deploy/: page.tsx
apps/platform/src/app/login/: page.tsx
apps/platform/src/lib/: supabaseClient.ts
scripts/: dockerfile-generator.ts  inspector.ts  mcp-http-wrapper.ts  railway-deployer.ts  tsconfig.json  validate-deployment.js
scripts/migrations/: add_deployment_url.sql
scripts/temp_repo/: __init__.py  agent.py  mcp_server.py  pyproject.toml  streamlit_client.py
scripts/temp_repo/code_interpreter_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
temp_repo/: .gitignore
