[project]
name = "code-interpreter-mcp"
version = "1.0.0"
description = "Code Interpreter MCP Server with Streamlit Client"
readme = "README_MCP.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "open-interpreter>=0.4.3",
    "python-dotenv>=1.0.0",
    "mcp>=1.2.0",
    "streamlit>=1.30.0",
    "httpx>=0.25.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent", "mcp_server", "streamlit_client"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv]
override-dependencies = []
